--- a/Theme.html
+++ b/Theme.html
@@ -17,7 +17,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/BLzqrat29/vision_core.css">
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/xqiqratpc/vision_core.css">
         {NewPostStyles}
         <noscript>
             <style>
@@ -186,11 +186,11 @@
                         <section class="controls">{block:NoteCount}
                             <a class="note-count" href="{Permalink}#notes">{NoteCountWithLabel}</a>{/block:NoteCount}
                             {LikeButton}&emsp;{ReblogButton}
-                        </section>{block:PostNotes}
-                        <section id="notes">
-                            {PostNotes-16}
-                        </section>{/block:PostNotes}
-                    </footer>{/block:Date}
+                        </section>
+                    </footer>{/block:Date}{block:PostNotes}
+                    <section id="notes">
+                        {PostNotes-16}
+                    </section>{/block:PostNotes}
                 </article>{/block:Posts}{block:IfNotSidebarPagination}{block:Pagination}
                 <div id="pagination">
                     <a id="previous-link" {block:PreviousPage} href="{PreviousPage}" {/block:PreviousPage}>{lang:Back}</a>
