--- a/Theme.html
+++ b/Theme.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 {block:Options}
     <meta name="image:Background" content="">
-    <meta name="font:Font" content="Favorit">
     <meta name="if:Sidebar Pagination" content="0">
     <meta name="text:Widget Code" content="">
 {/block:Options}
@@ -17,7 +16,8 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/GSgqrx1yt/vision_core.css">
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/3Mcqryyf9/vision_core.css">
+        <link rel="stylesheet" type="text/css" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
         {NewPostStyles}
         <noscript>
             <style>
@@ -33,7 +33,6 @@
                 --accent: {RGBAccentColor}; /* {AccentColor} */
                 --title-font: {TitleFont};
                 --title-font-weight: {TitleFontWeight};
-                --font-family: {font:Font};
             }
             aside nav a[href="/ask"]:empty::before {
                 content: "{block:English}Ask{/block:English}{block:German}Fragen{/block:German}{block:French}Question{/block:French}{block:Italian}Chiedi{/block:Italian}{block:Japanese}質問{/block:Japanese}{block:Turkish}Sor{/block:Turkish}{block:Spanish}Preguntas{/block:Spanish}{block:Russian}Спросить{/block:Russian}{block:Polish}Zapytaj{/block:Polish}{block:PortuguesePT}Perguntar{/block:PortuguesePT}{block:PortugueseBR}Ask{/block:PortugueseBR}{block:Dutch}Vragen{/block:Dutch}{block:Korean}질문{/block:Korean}{block:ChineseSimplified}提问{/block:ChineseSimplified}{block:ChineseTraditional}提問{/block:ChineseTraditional}{block:ChineseHK}提問{/block:ChineseHK}{block:Indonesian}Tanya{/block:Indonesian}{block:Hindi}पूछें{/block:Hindi}";
