--- a/Theme.html
+++ b/Theme.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/boOqrz0tt/vision_core.css">
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/tXYqrz1hi/vision_core.css">
         <link rel="stylesheet" type="text/css" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
         {NewPostStyles}
         <noscript>
@@ -114,8 +114,8 @@
                             {LinkCloseTag}
                         </figure>{/block:Panorama}{block:Photoset}
                         {Photoset}{/block:Photoset}{block:Quote}
-                        <blockquote>{Quote}</blockquote>{block:Source}
-                        <p>&mdash; {Source}</p>{/block:Source}{/block:Quote}{block:Link}
+                        <p class="npf_quote" data-quote-length="{Length}">{Quote}</p>{block:Source}
+                        <p>{Source}</p>{/block:Source}{/block:Quote}{block:Link}
                         <div class="npf-link-block {block:Thumbnail}has-poster not-{/block:Thumbnail}no-poster">
                             <a href="{URL}" {Target}>{block:Thumbnail}
                                 <div class="poster" style="background-image: url({Thumbnail-HighRes});">{/block:Thumbnail}
