--- a/Theme.html
+++ b/Theme.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {block:Options}
     <meta name="image:Background" content="">
+    <meta name="if:Show group members" content="0">
     <meta name="if:Sidebar Pagination" content="0">
     <meta name="text:Widget Code" content="">
 {/block:Options}
@@ -16,7 +17,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Xzqqrz1t5/vision_core.css">
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/7GSqrz3ne/vision_core.css">
         <link rel="stylesheet" type="text/css" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
         {NewPostStyles}
         <noscript>
@@ -202,7 +203,20 @@
                     <a id="next-link" {block:NextDayPage} href="{NextDayPage}" {/block:NextDayPage}>{lang:Next day}</a>
                 </div>{/block:DayPagination}{/block:IfNotSidebarPagination}
             </main>
-            <aside></aside>
+            <aside class="secondary">{block:IfShowGroupMembers}{block:GroupMembers}
+                <section id="group-members">
+                    <h1>{lang:Group members}</h1>
+                    <ul>{block:GroupMember}
+                        <li><a href="{GroupMemberURL}" {Target}>
+                            <img src="{GroupMemberPortraitURL-64}" alt="">
+                            <div class="group-member-info">
+                                <strong>{GroupMemberName}</strong>
+                                <span>{GroupMemberTitle}</span>
+                            </div>
+                        </a></li>{/block:GroupMember}
+                    </ul>
+                </section>{/block:GroupMembers}{/block:IfShowGroupMembers}
+            </aside>
         </div>
         <a id="credit" href="https://www.tumblr.com/theme/40627" {Target}>
             <span>{lang:Install this theme}</span>
