--- a/Theme.html
+++ b/Theme.html
@@ -18,9 +18,10 @@
         <meta name="description" content="{MetaDescription}">
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/w7cqs0z3s/vision_core.css">
-        <link rel="stylesheet" type="text/css" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/w7cqs0z3s/vision_core.css">
+        <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/ksuqs103p/vision_mobile.css">
+        <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
         {NewPostStyles}
         <noscript>
             <style>
