make legacy audio posts fullwidth

--- a/Theme.html
+++ b/Theme.html
@@ -23,7 +23,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/1avqsacfr/vision_core.css">
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/atLqsae6m/vision_core.css">
         <link rel="stylesheet" href="{select:Posts palette}">
         <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/uuJqs6e9m/vision_mobile.css">
         <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
@@ -141,7 +141,7 @@
                             <b>{Label}</b>{/block:Label}
                             {Line}
                         </p>{/block:Lines}{/block:Chat}{block:Audio}{block:AudioEmbed}
-                        {AudioEmbed}{/block:AudioEmbed}{/block:Audio}{block:Video}
+                        {AudioEmbed-640}{/block:AudioEmbed}{/block:Audio}{block:Video}
                         {VideoEmbed-500}{/block:Video}{block:Answer}
                         <div class="ask-item">
                             <div>
