--- a/Theme.html
+++ b/Theme.html
@@ -23,7 +23,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/F9Pqspc2n/vision_core.css">
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/cZhqsr0ic/vision_core.css">
         <link rel="stylesheet" href="{select:Posts palette}">
         <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/NCgqspc9t/vision_mobile.css">
         <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
@@ -206,7 +206,7 @@
                 </div>{/block:DayPagination}{/block:IfNotSidebarPagination}{block:PostNotes}
                 <div id="notes">
                     <h3>{block:Posts}{NoteCountWithLabel}{/block:Posts}</h3>
-                    {PostNotes-64}
+                    <div id="notes-scroller">{PostNotes-64}</div>
                 </div>{/block:PostNotes}
             </main>
             <aside class="secondary">{block:IfShowGroupMembers}{block:GroupMembers}
