add role="search" to search bar

--- a/Theme.html
+++ b/Theme.html
@@ -62,7 +62,7 @@
         <div id="base-container">
             <aside>
                 <section id="blog-card">
-                    <form id="search" {block:ShowHeaderImage}{block:StretchHeaderImage}class="overlaps-header"{/block:StretchHeaderImage}{/block:ShowHeaderImage} action="/search" method="get">
+                    <form id="search" {block:ShowHeaderImage}{block:StretchHeaderImage}class="overlaps-header"{/block:StretchHeaderImage}{/block:ShowHeaderImage} action="/search" method="get" role="search">
                         <input type="text" name="q" placeholder="{lang:Search}" autocomplete="off" value="{SearchQuery}"/>
                     </form>
                     <a href="{BlogURL}">{block:ShowHeaderImage}
