--- a/Theme.html
+++ b/Theme.html
@@ -198,15 +198,15 @@
                     </script>
                     <noscript><a href="https://disqus.com/?ref_noscript={text:Disqus Shortname}">{lang:Blog comments powered by Disqus}</a></noscript>
                 </div>{/block:IfDisqusShortname}{/block:PermalinkPage}{block:Pagination}
-                <div id="pagination">
+                <div id="pagination" role="navigation">
                     <a id="previous-link" {block:PreviousPage} href="{PreviousPage}" {/block:PreviousPage}>{lang:Back}</a>
                     <a id="next-link" {block:NextPage} href="{NextPage}" {/block:NextPage}>{lang:Next}</a>
                 </div>{/block:Pagination}{block:PermalinkPagination}
-                <div id="pagination">
+                <div id="pagination" role="navigation">
                     <a id="previous-link" {block:PreviousPost} href="{PreviousPost}" {/block:PreviousPost}>{lang:Previous post}</a>
                     <a id="next-link" {block:NextPost} href="{NextPost}" {/block:NextPost}>{lang:Next post}</a>
                 </div>{/block:PermalinkPagination}{block:DayPagination}
-                <div id="pagination">
+                <div id="pagination" role="navigation">
                     <a id="previous-link" {block:PreviousDayPage} href="{PreviousDayPage}" {/block:PreviousDayPage}>{lang:Previous day}</a>
                     <a id="next-link" {block:NextDayPage} href="{NextDayPage}" {/block:NextDayPage}>{lang:Next day}</a>
                 </div>{/block:DayPagination}
