fix NPF photoset heights

--- a/Theme.html
+++ b/Theme.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/eXPqsr5i1/vision_mobile.css">
         <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
         {NewPostStyles}
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/dNOqtntpp/fix_npf_photosets.css">
         <noscript>
             <style>
                 #search {
