--- a/Theme.html
+++ b/Theme.html
@@ -23,16 +23,13 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Wf0qynrqc/vision_core.css">
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/m6mqzk1oe/vision_core.css">
         <link rel="stylesheet" href="{select:Posts palette}">
         <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/984qvrvji/vision_mobile.css">
         <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
         {NewPostStyles}
         <noscript>
             <style>
-                #search {
-                    visibility: visible !important;
-                }
                 #comments {
                     display: none;
                 }
@@ -62,7 +59,7 @@
         <div id="base-container">
             <aside>
                 <section id="blog-card">
-                    <form id="search" {block:ShowHeaderImage}{block:StretchHeaderImage}class="overlaps-header"{/block:StretchHeaderImage}{/block:ShowHeaderImage} action="/search" method="get" role="search">
+                    <form id="search" {block:ShowHeaderImage}{block:StretchHeaderImage}class="overlaps-header"{/block:StretchHeaderImage}{/block:ShowHeaderImage} action="/search" method="get" role="search" {block:HideFromSearchEnabled}hidden{/block:HideFromSearchEnabled}>
                         <input type="text" name="q" placeholder="{lang:Search}" autocomplete="off" value="{SearchQuery}"/>
                     </form>
                     <a href="{BlogURL}">{block:ShowHeaderImage}
@@ -243,11 +240,4 @@
             <img src="https://static.tumblr.com/2wliono/2E5oic9yz/tiny.png" aria-hidden="true">
         </a>
     </body>
-    <script>
-        const search = document.getElementById('search');
-        const robots = document.head.querySelector('meta[name="robots"]');
-        if (robots === null || robots.content !== 'noindex') {
-            search.classList.add('search-enabled');
-        }
-    </script>
 </html>
