--- a/Theme.html
+++ b/Theme.html
@@ -24,7 +24,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/8RIr3t6vz/vision_core.css">
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Qdrr3uqv5/vision_core.css">
         <link rel="stylesheet" href="{select:Posts palette}">
         <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/1Elr3jan5/vision_mobile.css">
         <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
@@ -184,7 +184,7 @@
                 </article>{/block:Posts}{block:PostNotes}
                 <div id="notes">
                     <h3>{block:Posts}{NoteCountWithLabel}{/block:Posts}</h3>
-                    <div id="notes-scroller">{PostNotes-64}</div>
+                    {PostNotes-64}
                 </div>{/block:PostNotes}{block:PermalinkPage}{block:Posts}{block:Date}{block:IfDisqusShortname}
                 <div id="comments">
                     <h3>{lang:Blog comments powered by Disqus}</h3>
