--- a/Theme.html
+++ b/Theme.html
@@ -29,7 +29,7 @@
         <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/0Dkr3uqzi/vision_mobile.css">
         <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
         {NewPostStyles}
-        <script src="https://static.tumblr.com/2wliono/QR9r3j9l4/navigation.js" defer></script>
+        <script src="https://static.tumblr.com/2wliono/lImr48089/navigation.js" type="module"></script>
         <noscript>
             <style>
                 #comments {
